feat: flyway and mapstruct
* feat: flyway and mapstruct

* feat: flyway and mapstruct